sandbox/output
AnagramTest.java:9: error: cannot find symbol
        assertThat(Anagrams.of("a"), is(Arrays.asList("a")));
                                        ^
  symbol:   variable Arrays
  location: class AnagramTest
AnagramTest.java:14: error: cannot find symbol
        Anagram anagram = new Anagram();
        ^
  symbol:   class Anagram
  location: class AnagramTest
AnagramTest.java:14: error: cannot find symbol
        Anagram anagram = new Anagram();
                              ^
  symbol:   class Anagram
  location: class AnagramTest
AnagramTest.java:24: error: cannot find symbol
        Anagram anagram = new Anagram();
        ^
  symbol:   class Anagram
  location: class AnagramTest
AnagramTest.java:24: error: cannot find symbol
        Anagram anagram = new Anagram();
                              ^
  symbol:   class Anagram
  location: class AnagramTest
5 errors
